src/index.scss
@import 
  './static/css/Cover.scss', 
  './static/css/Plates.scss', 
  './static/css/Text.scss', 
  './static/css/Drops.scss', 
  './static/css/Nav.scss', 
  './static/css/PlateTooltip.scss', 
  './static/css/Rank.scss',
  './static/css/Deputy.scss' ;


:root {
  --white: #FFFFFF;
  --off-white: #FCFCFC;
  --black: #060606;
  --off-black: #1f1f1f;
  --gray-0: #4F4F4F;
  --gray-1: #6E6E6F;
  --gray-2: #AEAEAE;

  --pest-G01: #86694D;
  --pest-D27: #858C64;
  --pest-M02: #D1AA75;
  --pest-A14: #A18561;
  --pest-A02: #D8D5A8;
  --pest-C18: #717658;
  --pest-M01: #999165;
  --pest-I13: #BA9E57;
  --pest-C20: #977D4A;

  --blue-1: #5A90DA;
  --blue-2: #2573d8;
  --blue-3: #1555D9;
  --blue-4: #0339D9;

  --red: #BD3030;
}


#root {
  width: 100vw;
  max-width: 100%;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  margin: 0;
  font-family: Roboto, -apple-system, sans-serif;
  font-weight: 400;
  font-size: calc(12px + .25vw);
  text-align: left;
  color: var(--off-black);

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  overflow-x: hidden;
}

.lang-btn {
  display: none;
}

section {
  width: 100vw;
  padding: 0 2em;

  &:not(.cover) {
    max-width: 1600px;
    margin: 1em auto;
  }

  &.cover {
    min-height: 100vh;
  }

  &:last-child {
    margin-bottom: 2em;
  }
}

article > div:not(:last-child) {
  margin-bottom: 2rem;
}


button {
  border: none;
  outline: none;
  background: none;
  color: inherit;
  font-style: inherit;
  font-weight: inherit;
  font-size: inherit;
  line-height: inherit;
  text-align: inherit;
  padding: 0;
  margin: 0;
  font-family: inherit;
  text-shadow: inherit;

  cursor: pointer;

  font-size: 12px;
}

.link {
  padding: 0;
  margin: 0;
  text-decoration: none;

  color: var(--blue-2);
  font-weight: 500;

  &:hover {
    font-weight: 600;
  }

  &:focus {
    font-weight: 600;
    color: var(--blue-3);
  }

  &:active {
    font-weight: 600;
    color: var(--blue-3);
  }
}

ul {
  margin: 0;
  padding: 0;
}

h1, h2, h3, h4, h5, h6 {
  text-transform: uppercase;
  line-height: 150%;
  margin: 0;
  padding: 0;
}

h3 {
  text-align: center;
  margin: 18px 0 0 0;
  color: var(--black);
}

h4 {
  font-weight: 400;
  color: var(--gray-1);
}

p {
  line-height: 145%;
  font-weight: 400;
  margin-top: 1rem;
}

// ------------- MOBILE -------------
@media (max-width: 768px) {
  section {
    padding: 0;
    padding-top: 34px;
  }

  p, span, .footnote, .caption {
    font-size: .75rem;
  }

  h2 {
      font-size: 16px;
      font-weight: 400;
  }
}

// ------------- DESKTOP -------------
@media (min-width: 768px) {
  p, span, .footnote, .caption {
    font-size: .85rem;
  }

  h2 {
      font-size: 24px;
      font-weight: 400;
  }
}

.footnote {
  color: var(--gray-1);
}

.caption {
  font-weight: 300;
  margin-top: .3rem;
  width: 100%;
}

.deactivate {
  display: none !important;
}

.transparent {
  opacity: 0 !important;
}

.pos-relative {
  position: relative;
}

.flow-hidden {
  overflow: hidden;
}

.text-align-center {
  text-align: center;
}

.strong {
  font-weight: 600;
}

.def-shadow {
  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.25);
}

